--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
 
     <application
             android:name=".GlobalApplication"
@@ -43,6 +44,7 @@
                 android:screenOrientation="portrait"/>
         <activity
                 android:name=".MainActivity"
+
                 android:label="@string/app_name"
                 android:noHistory="true"
                 android:screenOrientation="portrait">
