--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file(keystore)
-            storePassword keystore_password
-            keyAlias key_alias
-            keyPassword key_password
+            storeFile file('keystore')
+            storePassword "keystore_password"
+            keyAlias "key_alias"
+            keyPassword "key_password"
         }
     }
     compileSdkVersion 29
@@ -35,6 +35,30 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+if (project.hasProperty("myproject.properties")) {
+    Properties props = new Properties()
+    def propFile = file(project.property("myproject.properties"))
+    if (propFile.canRead()) {
+        props.load(new FileInputStream(propFile))
+
+        if (props != null
+                && props.containsKey('keystore')
+                && props.containsKey('keystore_password')
+                && props.containsKey('key_alias')
+                && props.containsKey('key_password')) {
+
+            android.signingConfigs.release.storeFile = file(props['keystore'])
+            android.signingConfigs.release.storePassword = props['keystore_password']
+            android.signingConfigs.release.keyAlias = props['key_alias']
+            android.signingConfigs.release.keyPassword = props['key_password']
+        } else {
+            android.buildTypes.release.signingConfig = null
+        }
+    } else {
+        android.buildTypes.release.signingConfig = null
     }
 }
 
