--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,4 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-keystore=../../debug.keystore
-keystore_password=android
-key_alias=androiddebugkey
-key_password=android
+myproject.properties=../../allprojects.properties
