--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,5 @@ dependencies {
     implementation 'net.zetetic:android-database-sqlcipher:4.4.3@aar'
     implementation 'androidx.sqlite:sqlite:2.2.0'
     implementation 'com.opencsv:opencsv:5.4'
-    implementation 'androidx.biometric:biometric:1.1.0'
+    //implementation 'androidx.biometric:biometric:1.1.0'
 }
